Update : admin page

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,5 +8,15 @@
   </head>
   <body>
     <h1>ADMIN PAGE</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>No.</th>
+          <th>Name</th>
+          <th>Score</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </body>
 </html>
