Update : working basic crud

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -40,17 +40,17 @@
       <h1 class="text-white">REGISTER TO PLAY GAMES</h1>
       <form class="my-5" method="POST" action="/v1/createuser">
         <div class="row">
-          <label for="name" class="form-label text-white">Name</label>
+          <label for="username" class="form-label text-white">Username</label>
           <input
             type="text"
             class="form-control"
-            id="name"
-            name="name"
+            id="username"
+            name="username"
             aria-describedby="nameHelp"
             placeholder="John Doe"
             required
           />
-          <div id="nameHelp" class="form-text">Use your real names.</div>
+          <div id="nameHelp" class="form-text">Use a unique usernames.</div>
         </div>
 
         <div class="row">
