Update : succesfull create user redirect

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,7 +47,8 @@
             id="username"
             name="username"
             aria-describedby="nameHelp"
-            placeholder="John Doe"
+            placeholder="yourusername"
+            minlength="4"
             required
           />
           <div id="nameHelp" class="form-text">Use a unique usernames.</div>
@@ -62,6 +63,7 @@
             name="password"
             aria-describedby="passwordHelp"
             placeholder="*******"
+            minlength="4"
             required
           />
           <div id="passwordHelp" class="form-text">
