--- a/views/register.ejs
+++ b/views/register.ejs
@@ -38,7 +38,7 @@
   <body id="login-form" class="d-flex">
     <div class="container bg-dark m-auto px-5 py-5 rounded-3">
       <h1 class="text-white">REGISTER TO PLAY GAMES</h1>
-      <form class="my-5" method="POST" action="/v1/createuser">
+      <form class="my-5" method="POST" action="/">
         <div class="row">
           <label for="username" class="form-label text-white">Username</label>
           <input
@@ -48,6 +48,7 @@
             name="username"
             aria-describedby="nameHelp"
             placeholder="yourusername"
+            pattern="[a-z0-9-_\.]+"
             minlength="4"
             required
           />
