--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,9 @@
               </li>
               <% } else { %>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">SIGN UP</a>
+                <a class="nav-link" aria-current="page" href="/register"
+                  >SIGN UP</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/login">LOGIN</a>
