Update : login and register styles

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin games page</title>
+    <title><%= title %></title>
   </head>
   <body>
-    {% if admin != null %}
     <div class="container">
       <div class="row">
-        <h1>ADMIN PAGE</h1>
-        <p>Hello, <%= admin %>!</p>
+        <h1>Dashboard</h1>
+        <p>Hello, !</p>
       </div>
       <div class="row">
         <div class="col">
