--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,61 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <h1>Dashboard</h1>
-        <p>Hello, !</p>
-      </div>
-      <div class="row">
-        <div class="col">
-          <button class="btn btn-primary">Create</button>
-          <button class="btn btn-info">Save</button>
-          <button class="btn btn-warning">Update</button>
-          <button class="btn btn-danger">Delete</button>
+  <body class="d-flex" style="min-height: 100vh">
+    <main class="m-auto" style="min-width: 60rem">
+      <div class="container">
+        <div class="row">
+          <h1>Dashboard</h1>
+          <p>Hello, Admin!</p>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="d-flex justify-content-between">
+              <h2>User Table</h2>
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#addModal"
+              >
+                Create
+              </button>
+            </div>
+            <table class="table table-hover bordered">
+              <title>User Game Table</title>
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Username</th>
+                  <th>Password</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% user.map(item => { %>
+                <tr>
+                  <th><%= item.id %></th>
+                  <th><%= item.username %></th>
+                  <th><%= item.password %></th>
+                  <th>
+                    <button
+                      type="button"
+                      class="btn btn-warning"
+                      data-bs-toggle="modal"
+                      data-bs-target="#updateModal"
+                    >
+                      Update
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-danger"
+                      data-bs-toggle="modal"
+                      data-bs-target="#deleteModal"
+                    >
+                      Delete
+                    </button>
+                  </th>
+                </tr>
+                <% }) %>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <table>
-          <title>User Game Table</title>
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Username</th>
-              <th>Password</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
-      <div class="row">
-        <table>
-          <title>User Game Biodata</title>
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Email</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
-      <div class="row">
-        <table>
-          <title>User Game History</title>
-          <thead>
-            <tr>
-              <th>Username</th>
-              <th>Time</th>
-              <th>Score</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
-    </div>
-    {% endif %}
+    </main>
   </body>
+  <%- include("components/update.ejs"); %> <%- include("components/create.ejs");
+  %> <%- include("components/delete.ejs"); %>
+  <script src="/scripts/dashboard.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"
+  ></script>
 </html>
