Update : working CRUD dashboard

--- a/views/components/create.ejs
+++ b/views/components/create.ejs
@@ -10,7 +10,7 @@
       <div class="modal-header">
         <h5 class="modal-title" id="addModalLabel">Add User</h5>
       </div>
-      <form action="/dashboard" method="post">
+      <form action="/dashboard/add" method="post">
         <div class="modal-body">
           <div class="form-group">
             <label>Username:</label>
