--- a/views/components/delete.ejs
+++ b/views/components/delete.ejs
@@ -10,7 +10,7 @@
       <div class="modal-header">
         <h5 class="modal-title" id="deleteModalLabel">Delete User</h5>
       </div>
-      <form action="/dashboard" method="delete">
+      <form id="deleteForm" action="" method="POST">
         <div class="modal-body">Are you sure ?</div>
         <div class="modal-footer">
           <div class="form-group">
