--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,7 +40,7 @@
     <div class="form-signin d-flex h-100">
       <div class="bg-dark m-auto px-5 py-5 rounded-3">
         <h1 class="text-white">Login to play games</h1>
-        <form class="my-5" method="POST" action="/">
+        <form class="my-5" method="POST" action="/login">
           <div class="form-floating">
             <input
               type="text"
