--- a/views/components/update.ejs
+++ b/views/components/update.ejs
@@ -10,7 +10,7 @@
       <div class="modal-header">
         <h5 class="modal-title" id="updateModalLabel">Update User</h5>
       </div>
-      <form action="/books/add" method="post">
+      <form id="updateForm" action="" method="POST">
         <div class="modal-body">
           <div class="form-group">
             <label>Username:</label>
