--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,6 +86,14 @@
                   ><%= name %></a
                 >
               </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-uppercase"
+                  aria-current="page"
+                  href="/logout"
+                  >logout</a
+                >
+              </li>
               <% } else { %>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/register"
