--- a/views/dashboard-user.ejs
+++ b/views/dashboard-user.ejs
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="row">
           <h1>Dashboard</h1>
-          <p>Hello, Admin!</p>
+          <p>Hello, User!</p>
         </div>
         <div class="row">
           <div class="col">
@@ -42,19 +42,18 @@
                 </tr>
               </thead>
               <tbody>
-                <% if(user.length) { %> <% user.map(item => { %>
                 <tr>
-                  <th><%= item.id %></th>
-                  <th><%= item.username %></th>
-                  <th><%= item.password %></th>
+                  <th>lorem</th>
+                  <th>lorem</th>
+                  <th>lorem</th>
                   <th>
                     <a
                       type="button"
                       class="btn btn-warning editButton"
                       data-bs-toggle="modal"
                       data-bs-target="#updateModal"
-                      data-bs-id="<%= item.id %>"
-                      href="../dashboard/edit/<%= item.id %>"
+                      data-bs-id="user-id"
+                      href="../dashboard-user/edit/user-id"
                     >
                       Update
                     </a>
@@ -63,14 +62,13 @@
                       class="btn btn-danger deleteButton"
                       data-bs-toggle="modal"
                       data-bs-target="#deleteModal"
-                      data-bs-id="<%= item.id %>"
-                      href="../dashboard/delete/<%= item.id %>"
+                      data-bs-id="user-id"
+                      href="../dashboard-user/delete/user-id"
                     >
                       Delete
                     </a>
                   </th>
                 </tr>
-                <% }) %> <% } %>
               </tbody>
             </table>
           </div>
@@ -78,8 +76,8 @@
       </div>
     </main>
   </body>
-  <%- include("components/update.ejs"); %> <%- include("components/create.ejs");
-  %> <%- include("components/delete.ejs"); %>
+  <%- include("components/update.ejs"); %> <%- include("components/delete.ejs");
+  %>
   <script src="/scripts/dashboard.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
