--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,13 +82,14 @@
                 <a
                   class="nav-link text-uppercase"
                   aria-current="page"
-                  href="/games"
+                  href="/dashboard"
                   ><%= name %></a
                 >
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link text-uppercase"
+                  Admin
                   aria-current="page"
                   href="/logout"
                   >logout</a
