--- a/views/register.ejs
+++ b/views/register.ejs
@@ -43,7 +43,7 @@
           <div class="form-floating">
             <input
               type="text"
-              class="form-control <% if (username) { %> is-invalid <% } %>"
+              class="form-control <% if (userExist) { %> is-invalid <% } %>"
               id="username"
               name="username"
               placeholder="yourusername"
