--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,19 +40,12 @@
     <div class="form-signin d-flex h-100">
       <div class="bg-dark m-auto px-5 py-5 rounded-3">
         <h1 class="text-white">Login to play games</h1>
-        <form class="my-5" method="POST" action="/login">
+        <form class="my-5" method="get" action="/login/auth">
           <div class="form-floating">
-            <input
-              type="text"
-              class="form-control <% if (wrong) { %> is-invalid <% } %>"
-              id="username"
-              name="username"
-              placeholder="yourusername"
-              pattern="[a-z0-9-_\.]+"
-              minlength="4"
-              aria-describedby="nameHelp"
-              required
-            />
+            <input type="text" class="form-control <% if (msg ==
+            "usernamewrong") { %> is-invalid <% } %>" id="username"
+            name="username" placeholder="yourusername" pattern="[a-z0-9-_\.]+"
+            minlength="4" aria-describedby="nameHelp" required />
             <label for="username">Username</label>
             <div id="validationServerUsernameFeedback" class="invalid-feedback">
               Wrong username, please input the correct one.
@@ -63,16 +56,10 @@
           </div>
 
           <div class="form-floating">
-            <input
-              type="password"
-              class="form-control <% if (wrong) { %> is-invalid <% } %>"
-              id="password"
-              name="password"
-              aria-describedby="passwordHelp"
-              placeholder="*******"
-              minlength="4"
-              required
-            />
+            <input type="password" class="form-control <% if (msg ==
+            "passwordwrong") { %> is-invalid <% } %>" id="password"
+            name="password" aria-describedby="passwordHelp"
+            placeholder="*******" minlength="4" required />
             <label for="password">Password</label>
             <div id="validationServerUsernameFeedback" class="invalid-feedback">
               Wrong password, please input the correct one.
