Update : clearup codes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@
                 <a
                   class="nav-link text-uppercase"
                   aria-current="page"
-                  href="/dashboard"
+                  href="/dashboard?user=<%= name %>"
                   ><%= name %></a
                 >
               </li>
