Update : enhance update method

--- a/views/components/create.ejs
+++ b/views/components/create.ejs
@@ -22,6 +22,7 @@
               autocomplete="off"
               pattern="[a-z0-9-_\.]+"
               minlength="4"
+              required
             />
           </div>
           <div class="form-group">
