--- a/views/login.ejs
+++ b/views/login.ejs
@@ -69,8 +69,9 @@
             Use a proper password and easy to remember.
           </div>
 
-          <div class="py-2">
+          <div class="py-2 d-flex justify-content-between">
             <button class="btn btn-lg btn-primary" type="submit">Login</button>
+            <a class="btn btn-lg btn-secondary" href="/register">Register</a>
           </div>
         </form>
       </div>
