--- a/views/register.ejs
+++ b/views/register.ejs
@@ -78,10 +78,12 @@
             Use a proper password and easy to remember.
           </div>
 
-          <div class="py-2">
+          <div class="py-2 d-flex justify-content-between">
             <button class="btn btn-lg btn-primary" type="submit">
               Register
             </button>
+            <a class="btn btn-lg btn-secondary" href="/login">Login</a>
+          </div>
           </div>
         </form>
       </div>
