--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,11 @@
                 <a
                   class="nav-link text-uppercase"
                   aria-current="page"
+                  <% if (name == "admin") { %>
                   href="/dashboard?user=<%= name %>"
+                  <% } else {%>
+                  href="/dashboard-user?user=<%= name %>"
+                  <% } %>
                   ><%= name %></a
                 >
               </li>
