--- a/views/register.ejs
+++ b/views/register.ejs
@@ -39,7 +39,7 @@
     <div class="form-signin d-flex h-100">
       <div class="bg-dark m-auto px-5 py-5 rounded-3">
         <h1 class="text-white">Register to play</h1>
-        <form class="my-5" method="POST" action="/register">
+        <form class="my-5" method="post" action="/register">
           <div class="form-floating">
             <input
               type="text"
