Updaet : cleanup codes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,6 +10,16 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <style>
+      .alert {
+        position: absolute;
+        width: 20rem;
+        left: 0;
+        right: 0;
+        margin: auto;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
