--- a/views/games.ejs
+++ b/views/games.ejs
@@ -42,7 +42,7 @@
     <header>
       <nav>
         <div class="back_button">
-          <a href="/">
+          <a href="/?user=<%= name %>">
             <h2><</h2>
           </a>
         </div>
