--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,7 +129,7 @@
               <a
                 href="
               <% if (name) { %>
-                /games
+                /games?user=<%= name %>
               <% } else { %>
                 /login
               <% } %>
