--- a/views/dashboard-user.ejs
+++ b/views/dashboard-user.ejs
@@ -10,6 +10,16 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <style>
+      .alert {
+        position: absolute;
+        width: 20rem;
+        left: 0;
+        right: 0;
+        margin: auto;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -29,10 +39,12 @@
         <div class="row">
           <h1>User Profile</h1>
           <p>Hello, <%= username %></p>
-          <% if(msg) { %>
-          <div class="alert alert-success" role="alert">
-            Successfully updated!
+          <% if(msg == 'error') { %>
+          <div class="alert alert-danger" role="alert">
+            Oops! please try again
           </div>
+          <% } %> <% if(msg == 'updated') { %>
+          <div class="alert alert-success" role="alert">Username Updated !</div>
           <% } %>
         </div>
         <div class="row">
@@ -57,15 +69,15 @@
                 <tbody>
                   <% if(user != "") { %>
                   <tr>
-                    <th><%= user.user_id %></th>
+                    <th id="user_id"><%= user.user_id %></th>
                     <th><%= user.full_name %></th>
                     <th><%= user.email %></th>
                     <th class="text-center">
                       <a
                         type="button"
-                        class="btn btn-warning editButton disabled"
+                        class="btn btn-warning editProfileButton"
                         data-bs-toggle="modal"
-                        data-bs-target="#updateModal"
+                        data-bs-target="#updateUserModal"
                         data-bs-id="<%= user.user_id %>"
                         href="../dashboard/edit/<%= user.user_id %>"
                       >
@@ -86,7 +98,8 @@
       </div>
     </main>
   </body>
-  <%- include("components/update.ejs"); %>
+  <%- include("components/update-user.ejs"); %>
+  <script src="/scripts/dashboard.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
